# slack-log

./: .gitignore  .timestamps.json  ChangeLog.md  LICENSE  README.md  package.yaml  run.sample.bat  run.sample.sh  slack-log.cabal  slack-log.yaml  stack.yaml
.github/workflows/: verify.yml
app/: Main.hs  convert-old-jsons-to-htmls.hs  devserver.hs  paginate-old-jsons.hs
doc/: index.html
doc/json/: .channels.json  .config.json  .groups.json  .rendering.json  .timestamps.json  .users.json  C4LFB6DE0-1529904783.000148.json  C4LFB6DE0-1529989305.000118.json  C4LFB6DE0-1530339344.000024.json  C4LFB6DE0-1530457959.000047.json  C4LFB6DE0-1530493207.000236.json  C4LFB6DE0-1531115358.000151.json  C4LFB6DE0-1531192997.000005.json  C4LFB6DE0-1531702812.000158.json  C4LFB6DE0-1531809590.000172.json  C4LFB6DE0-1531881166.000131.json  C4LFB6DE0-1532108963.000002.json  C4LFB6DE0-1532160485.000063.json  C4LFB6DE0-1532307610.000237.json  C4LFB6DE0-1532508504.000343.json  C4LFB6DE0-1532752546.000002.json  C4LFB6DE0-1532792205.000066.json  C4LFB6DE0-1532853756.000014.json  C4LFB6DE0-1532962717.000010.json  C4LFB6DE0-1532993795.000102.json  C4LFB6DE0-1532997732.000110.json  C4LFB6DE0-1533043820.000095.json  C4LFB6DE0-1533113953.000412.json  C4LFB6DE0-1533183924.000086.json  C4LFB6DE0-1533353613.000039.json  C4LFB6DE0-1533541482.000172.json  C4LFB6DE0-1533734868.000026.json  C4LFB6DE0-1533776889.000108.json  C4LFB6DE0-1533993564.000045.json  C4LFB6DE0-1534122019.000184.json  C4LFB6DE0-1534756010.000200.json  C4LFB6DE0-1534917533.000200.json  C4LFB6DE0-1534951197.000100.json  C4LFB6DE0-1535065476.000300.json  C4LFB6DE0-1535083405.000200.json  (+174 more)
docs/: index.html  main.css
docs/json/: .channels.json  .config.json  .groups.json  .timestamps.json  .users.json
docs/templates/: index.mustache.html  messages.mustache.html  thread.mustache.html
script/temp/: SortJson.hs
src/Data/: NamedPage.hs
src/SlackLog/: Duration.hs  Html.hs  Pagination.hs  Replies.hs  Types.hs  Util.hs
templates/: index.mustache.html  messages.mustache.html
test/Data/: NamedPageSpec.hs
test/SlackLog/: DurationSpec.hs  HtmlSpec.hs  PaginationSpec.hs  RepliesSpec.hs  TypesSpec.hs
test/assets/: .channels.json  .config.json  .timestamps.json  .users.json  (+5 more)
(+2293 files in other folders)
